// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSonarjsRules allows passing custom rules 1`] = `
Object {
  "sonarjs/cognitive-complexity": "off",
  "sonarjs/max-switch-cases": Array [
    "error",
    15,
  ],
  "sonarjs/no-all-duplicated-branches": "error",
  "sonarjs/no-collapsible-if": "error",
  "sonarjs/no-collection-size-mischeck": "warn",
  "sonarjs/no-duplicate-string": "error",
  "sonarjs/no-duplicated-branches": "error",
  "sonarjs/no-element-overwrite": "error",
  "sonarjs/no-extra-arguments": "off",
  "sonarjs/no-identical-conditions": "error",
  "sonarjs/no-identical-expressions": "error",
  "sonarjs/no-identical-functions": "error",
  "sonarjs/no-inverted-boolean-check": "error",
  "sonarjs/no-one-iteration-loop": "error",
  "sonarjs/no-redundant-boolean": "error",
  "sonarjs/no-redundant-jump": "error",
  "sonarjs/no-same-line-conditional": "off",
  "sonarjs/no-small-switch": "warn",
  "sonarjs/no-unused-collection": "error",
  "sonarjs/no-use-of-empty-return-value": "error",
  "sonarjs/no-useless-catch": "error",
  "sonarjs/prefer-immediate-return": "warn",
  "sonarjs/prefer-object-literal": "error",
  "sonarjs/prefer-single-boolean-return": "error",
  "sonarjs/prefer-while": "error",
}
`;

exports[`createSonarjsRules matches snapshot with typescript 1`] = `
Object {
  "sonarjs/cognitive-complexity": "warn",
  "sonarjs/max-switch-cases": Array [
    "error",
    15,
  ],
  "sonarjs/no-all-duplicated-branches": "error",
  "sonarjs/no-collapsible-if": "error",
  "sonarjs/no-collection-size-mischeck": "warn",
  "sonarjs/no-duplicate-string": "error",
  "sonarjs/no-duplicated-branches": "error",
  "sonarjs/no-element-overwrite": "error",
  "sonarjs/no-extra-arguments": "off",
  "sonarjs/no-identical-conditions": "error",
  "sonarjs/no-identical-expressions": "error",
  "sonarjs/no-identical-functions": "error",
  "sonarjs/no-inverted-boolean-check": "error",
  "sonarjs/no-one-iteration-loop": "error",
  "sonarjs/no-redundant-boolean": "error",
  "sonarjs/no-redundant-jump": "error",
  "sonarjs/no-same-line-conditional": "off",
  "sonarjs/no-small-switch": "warn",
  "sonarjs/no-unused-collection": "error",
  "sonarjs/no-use-of-empty-return-value": "error",
  "sonarjs/no-useless-catch": "error",
  "sonarjs/prefer-immediate-return": "warn",
  "sonarjs/prefer-object-literal": "error",
  "sonarjs/prefer-single-boolean-return": "error",
  "sonarjs/prefer-while": "error",
}
`;

exports[`createSonarjsRules matches snapshot without typescript 1`] = `
Object {
  "sonarjs/cognitive-complexity": "warn",
  "sonarjs/max-switch-cases": Array [
    "error",
    15,
  ],
  "sonarjs/no-all-duplicated-branches": "error",
  "sonarjs/no-collapsible-if": "error",
  "sonarjs/no-collection-size-mischeck": "warn",
  "sonarjs/no-duplicate-string": "error",
  "sonarjs/no-duplicated-branches": "error",
  "sonarjs/no-element-overwrite": "error",
  "sonarjs/no-extra-arguments": "error",
  "sonarjs/no-identical-conditions": "error",
  "sonarjs/no-identical-expressions": "error",
  "sonarjs/no-identical-functions": "error",
  "sonarjs/no-inverted-boolean-check": "error",
  "sonarjs/no-one-iteration-loop": "error",
  "sonarjs/no-redundant-boolean": "error",
  "sonarjs/no-redundant-jump": "error",
  "sonarjs/no-same-line-conditional": "off",
  "sonarjs/no-small-switch": "warn",
  "sonarjs/no-unused-collection": "error",
  "sonarjs/no-use-of-empty-return-value": "error",
  "sonarjs/no-useless-catch": "error",
  "sonarjs/prefer-immediate-return": "warn",
  "sonarjs/prefer-object-literal": "error",
  "sonarjs/prefer-single-boolean-return": "error",
  "sonarjs/prefer-while": "error",
}
`;
